<resources>
    <string name="app_name">T-chat</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_meassage">Last meassage</string>
    <string name="kunal_singh">Kunal Singh</string>
</resources>