<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@color/blue"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="180dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="-180dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:ems="10"
            android:padding="9dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAlreadyHaveAccount"
            android:layout_gravity="right"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:gravity="right"
            android:padding="5dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:layout_marginTop="50dp"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:backgroundTint="@color/purple_200"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_google"
                android:padding="20dp"
                android:text="Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                android:layout_marginTop="50dp"
                 />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="20dp"
                android:text="Facebook"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/fb_color"
                android:layout_marginTop="50dp"
                />



        </LinearLayout>

        <TextView
            android:id="@+id/txtSignUpPhone"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="50dp"
            android:text="Sign Up with Phone"
            android:textColor="@color/black"
            android:textSize="19sp" />


    </LinearLayout>
</LinearLayout>